plugins {
    id 'java'
    id 'org.springframework.boot' apply(false)
    id 'io.spring.dependency-management' apply(false)
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

allprojects {
    repositories {
        mavenCentral()
    }

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

}

subprojects {
    apply (plugin: "java")
    apply (plugin: "java-library")
    apply (plugin: "org.springframework.boot")
    apply (plugin: "io.spring.dependency-management")

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
    }

    tasks.withType(JavaCompile).configureEach {
        options.release = 21
    }

    dependencies {
        implementation("org.springframework.boot:spring-boot-starter")
        implementation("com.googlecode.json-simple:json-simple:1.1.1")
        compileOnly("org.projectlombok:lombok")
        annotationProcessor("org.projectlombok:lombok")
        testImplementation ("org.springframework.boot:spring-boot-starter-test")
    }
}

tasks.named('test') {
    useJUnitPlatform()
        testLogging {
            events "passed", "skipped", "failed"
            showStandardStreams = true
    }
    // 버전 업데이트 경고 로그 삭제를 위해 추가
    jvmArgs += ["-XX:+EnableDynamicAgentLoading"]
    systemProperty "spring.profiles.active", "local"
}